--- a/terraform/src_2/.gitignore
+++ b/terraform/src_2/.gitignore
@@ -1,13 +1,12 @@
 # Local .terraform directories and files
-# **/.terraform/*
-# .terraform*
+**/.terraform/*
+.terraform*
 
-# !.terraformrc
-
-# # .tfstate files
-# *.tfstate
-# *.tfstate.*
+!.terraformrc
+*.tfstate files
+*.tfstate
+*.tfstate.*
 
 # # own secret vars store.
-# personal.auto.tfvars
+personal.auto.tfvars
 key.json
