--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-elasticsearch-8.0.0-amd64.deb
+# Local .terraform directories and files
+**/.terraform/*
+.terraform*
+
+!.terraformrc
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# own secret vars store.
+personal.auto.tfvars
+key.json
