исправление дз - переменные

--- a/terraform/src_2/.gitignore
+++ b/terraform/src_2/.gitignore
@@ -3,10 +3,11 @@
 .terraform*
 
 !.terraformrc
-*.tfstate files
+
+# .tfstate files
 *.tfstate
 *.tfstate.*
 
-# # own secret vars store.
+# own secret vars store.
 personal.auto.tfvars
 key.json
