--- a/ansible/playbook_two/inventory/prod.yml
+++ b/ansible/playbook_two/inventory/prod.yml
@@ -2,8 +2,23 @@
 clickhouse:
   hosts:
     clickhouse-01:
-      ansible_connection: docker
+      ansible_host: 158.160.122.167
+      ansible_connection: ssh
+      ansible_user: galchonkov
+      ansible_ssh_private_key_file: /home/galchonkov/.ssh/id_ed25519
+      
 vector:
   hosts:
     vector-01:
-      ansible_connection: docker
+      ansible_host: 158.160.114.184
+      ansible_connection: ssh
+      ansible_user: galchonkov
+      ansible_ssh_private_key_file: /home/galchonkov/.ssh/id_ed25519
+
+lighthouse:
+  hosts:
+    lighthouse-01:
+      ansible_host: 84.201.135.160
+      ansible_connection: ssh
+      ansible_user: galchonkov
+      ansible_ssh_private_key_file: /home/galchonkov/.ssh/id_ed25519
