--- a/ansible/roles/vector/handlers/main.yml
+++ b/ansible/roles/vector/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for vector
+- name: Start vector service
+  become: true
+  ansible.builtin.service:
+    name: vector
+    state: restarted
