--- a/ansible/roles/vector/meta/main.yml
+++ b/ansible/roles/vector/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
+  author: Kirill Galchonkov
+  description: Install vector packages
   company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: MIT
 
   min_ansible_version: 2.1
 
@@ -27,11 +27,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
+  platforms:
+    - name: Ubuntu
+      versions:
+        - 22
   # - name: SomePlatform
   #   versions:
   #   - all
