--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -3,3 +3,7 @@
   src: https://github.com/Kirill67km/sysadmin-homeworks.git
   scm: git
   version: v3.0
+- name: vector
+  src: https://github.com/Kirill67km/sysadmin-homeworks.git
+  scm: git
+  version: v3.2
