--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -2,8 +2,12 @@
 - name: clickhouse
   src: https://github.com/Kirill67km/sysadmin-homeworks.git
   scm: git
-  version: v3.0
+  version: v3.2.2
 - name: vector
   src: https://github.com/Kirill67km/sysadmin-homeworks.git
   scm: git
-  version: v3.2.1
+  version: v3.2.2
+- name: lighthouse
+  src: https://github.com/Kirill67km/sysadmin-homeworks.git
+  scm: git
+  version: v3.2.2
