--- a/software/ansible-jenkins/site.yml
+++ b/software/ansible-jenkins/site.yml
@@ -108,7 +108,10 @@
         executable: pip3
         name:
           - selinux
-          - ansible<3.0
+          - ansible==2.10
+          - molecule==3.4.0
+          - molecule-docker==1.1.0
+          - requests==2.24.0
         state: present
     - name: Reinstall Selinux
       become_user: root
