--- a/software/pipeline/Jenkinsfile
+++ b/software/pipeline/Jenkinsfile
@@ -1,16 +1,16 @@
 node("linux"){
-    stage("Git checkout"){
-        git credentialsId: '5ac0095d-0185-431b-94da-09a0ad9b0e2c', url: 'git@github.com:aragastmatb/example-playbook.git'
+    stage("Git checkout my") {
+        git branch: 'hometask', credentialsId: '990687d1-cf0c-4acd-9093-10140dac2968', url: 'git@github.com:Kirill67km/sysadmin-homeworks.git'
     }
     stage("Sample define secret_check"){
         secret_check=true
     }
     stage("Run playbook"){
-        if (secret_check){
-            sh 'ansible-playbook site.yml -i inventory/prod.yml'
+        if (prod_run == 'True'){
+            sh 'ansible-playbook ansible/playbook_two/site.yml -i inventory/prod.yml'
         }
-        else{
-            echo 'need more action'
+        else{ 
+            sh 'ansible-playbook ansible/playbook_twosite.yml -i inventory/prod.yml --check --diff'
         }
         
     }
